# copilot-ia

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  agents_config.yaml  logging_config.yaml  prompts_config.yaml
copilot_ia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: DEPLOY_GUIDE.md
examples/: basic_usage.py  cli_example.py  coordinator_example.py
notebooks/: diff_analysis_demo.ipynb  documentation_api_demo.ipynb  getting_started.ipynb  security_copilot_demo.ipynb  testing_copilot_demo.ipynb
notebooks/.ipynb_checkpoints/: Potto Flow Agente de agendamento-checkpoint.json  getting_started-checkpoint.ipynb  testing_copilot_demo-checkpoint.ipynb
prompts/: COPILOT_IA_PROMPT.md  SYSTEM_PROMPT.txt  copilot_context.json
scripts/: copilot_client.py
src/: __init__.py
src/agents/: __init__.py  base.py  coordinator.py
src/api/: __init__.py  main.py
src/copilots/: __init__.py  architecture.py  code_reviewer.py  debug.py  documentation.py  refactoring.py  security.py  testing.py
src/tools/: __init__.py  code_analysis.py  file_operations.py  git_tools.py  search_tools.py
src/utils/: __init__.py  cache.py  logger.py  token_counter.py
tests/: __init__.py  test_tools.py  test_utils.py
